--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.5
   get_it: ^7.6.4
   google_fonts: ^6.0.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
