--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   http: ^1.1.0
+  sqflite: ^2.3.0
   provider: ^6.0.5
   get_it: ^7.6.4
   google_fonts: ^6.0.0
