--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -22,14 +22,16 @@ dependencies:
 
   google_fonts: ^6.1.0
   equatable: ^2.0.5
-  provider: ^6.0.5
+  provider: ^6.1.1
   cached_network_image: ^3.3.0
   flutter_rating_bar: ^4.0.1
+  internet_connection_checker: ^1.0.0+1
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
   mockito: ^5.4.2
   build_runner: ^2.4.6
 
