--- a/packages/search/pubspec.yaml
+++ b/packages/search/pubspec.yaml
@@ -19,15 +19,19 @@ dependencies:
     path: ../tv
 
   dartz: ^0.10.1
-  http: ^1.1.0
-  provider: ^6.1.1
+  http: ^1.2.0
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
-  mockito: ^5.4.2
-  build_runner: ^2.4.6
+  mockito: ^5.4.4
+  mocktail: ^1.0.3
+  build_runner: ^2.4.8
+  bloc_test: ^9.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
