--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,15 +44,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  http: ^1.1.0
+  http: ^1.2.0
   provider: ^6.1.1
-  get_it: ^7.6.4
+  get_it: ^7.6.7
   internet_connection_checker: ^1.0.0+1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.4.2
+  mockito: ^5.4.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
